<resources>
    <string name="app_name">NK Invoicing</string>
    <string name="user_company_name">Your Company Name</string>
    <string name="receiver_company_name">Receiver Name</string>
    <string name="user_address">Your Address Here</string>
    <string name="receiver_address">Receiver Address Here</string>
    <string name="receiver_postcode">Your Postcode Here</string>
    <string name="user_postcode">Receiver Postcode Here</string>
    <string name="user_tel">Your phone number</string>
    <string name="receiver_tel">Receiver phone number</string>
    <string name="user_company_id">Your Company ID </string>
    <string name="receiver_company_id">His company id(optiona)</string>
    <string name="invoice_no">0001</string>
    <string name="issue_date">12/12/21</string>
    <string name="due_date">21/21/21</string>
    <string name="user_email">company@email.com</string>
    <string name="receiver_email">receiver@email.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_invoice">Save Invoice</string>
    <string name="title_activity_maps">Map</string>
</resources>